Fix header items positioning on mobile view.

--- a/sources/stylesheets/layout/_header.scss
+++ b/sources/stylesheets/layout/_header.scss
@@ -26,6 +26,7 @@
   &__top {
     display: flex;
     align-items: center;
+    width: 100%;
   }
 
   &__title {
